2008-07-27  Johan Dahlin  <johan@gnome.org>

	* gobject/Makefile.am:
	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pygboxed.c (pygobject_boxed_register_types):
	* gobject/pygboxed.h:
	* gobject/pygenum.c (pygobject_enum_register_types):
	* gobject/pygenum.h:
	* gobject/pygflags.c (pygobject_flags_register_types):
	* gobject/pygflags.h:
	* gobject/pygpointer.c (pygobject_pointer_register_types):
	* gobject/pygpointer.h:
	Split out quark and type registration to the respective
	implementation source files, add headers.

2008-07-27  Johan Dahlin  <johan@gnome.org>

	* gobject/Makefile.am:
	* gobject/gobjectmodule.c (pygobject_register_api),
	(pygobject_register_constants), (pygobject_register_features),
	(pygobject_register_version_tuples), (pygobject_register_warnings),
	(init_gobject):
	* gobject/pygobject-private.h:
	* gobject/pygobject.c (pyobject_copy), (pyobject_free),
	(pygobject_object_register_types):
	* gobject/pygtype.c (_pyg_strv_from_gvalue), (_pyg_strv_to_gvalue),
	(pygobject_type_register_types):
	* gobject/pygtype.h:
	Move off a bit more to separate functions, cleaning up the init_glib
	a bit more.

2008-07-27  Johan Dahlin  <johan@gnome.org>

	* gobject/Makefile.am:
	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pygobject-private.h:
	* gobject/pygobject.c:
	* gobject/pygparamspec.c (pygobject_paramspec_register_types):
	* gobject/pygparamspec.h:
	* gobject/pygtype.c:
	Move paramspec registration to a separate file, add a header
	for the internal API.

2008-07-27  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygtype.c (pyg_enum_get_value): Issue warning if 'obj'
	is a PyGEnum of wrong type, i.e. not matching 'enum_type' (bug
	#503771).

2008-07-26  Johan Dahlin  <johan@gnome.org>

	reviewed by: <delete if not using a buddy>

	* glib/pyglib-python-compat.h:
	* glib/pyglib.h:
	Make a few macros public

	* gobject/Makefile.am:
	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pyginterface.c (pyg_interface_init),