@@ -37,7 +37,7 @@ _gobject_la_CFLAGS = \
 	$(GLIB_CFLAGS) \
 	 -DPY_SSIZE_T_CLEAN \
 	-I$(top_srcdir)/glib
-_gobject_la_LDFLAGS = $(common_ldflags) -export-symbols-regex init_gobject
+_gobject_la_LDFLAGS = $(common_ldflags) -export-symbols-regex "_gobject|PyInit__gobject"
 _gobject_la_LIBADD = \
 	$(GLIB_LIBS) \
 	$(FFI_LIBS) \
